--- a/foro_global.html
+++ b/foro_global.html
@@ -34,23 +34,23 @@
         <p></p>
 
         <form class="formu" method="post" action="gracias_form.html">
-            <p><input type="text" name="Nombre y apellido" required placeholder="Nombre y apellido"></p>
+            <p><input type="text" name="Nombre y apellido" required placeholder="Nombre y apellido" required></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
-            <p><input type="text" name="Nombre de usuario" required placeholder="Nombre de usuario"></p>
+            <p><input type="text" name="Nombre de usuario" required placeholder="Nombre de usuario" required></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
-             <p><input type="email" name="email" required placeholder="Email"></p>
+             <p><input type="email" name="email" required placeholder="Email" required></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
-            <p><input type="number" name="num Teléfono" required placeholder="Teléfono"></p>
+            <p><input type="number" name="num Teléfono" required placeholder="Teléfono" required></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
-            <p>¿Desea recivir notificaciones sobre la actividad en la página? <input type="checkbox" name="SI" placeholder="SI"></p>
+            <p>¿Desea recivir notificaciones sobre la actividad en la página? <input type="checkbox" name="SI" placeholder="SI" required></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
