--- a/foro_global.html
+++ b/foro_global.html
@@ -34,23 +34,23 @@
         <p></p>
 
         <form class="formu" method="post" action="gracias_form.html">
-            <p><input type="text" name="Nombre y apellido" required placeholder="Nombre y apellido" required></p>
+            <p><input type="text" name="Nombre y apellido" placeholder="Nombre y apellido" required></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
-            <p><input type="text" name="Nombre de usuario" required placeholder="Nombre de usuario" required></p>
+            <p><input type="text" name="Nombre de usuario" placeholder="Nombre de usuario" required></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
-             <p><input type="email" name="email" required placeholder="Email" required></p>
+             <p><input type="email" name="email" placeholder="Email" required></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
-            <p><input type="number" name="num Teléfono" required placeholder="Teléfono" required></p>
+            <p><input type="number" name="num Teléfono" placeholder="Teléfono" required></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
-            <p>¿Desea recivir notificaciones sobre la actividad en la página? <input type="checkbox" name="SI" placeholder="SI" required></p>
+            <p>¿Desea recivir notificaciones sobre la actividad en la página? <input type="checkbox" name="SI" placeholder="SI"></p>
         </form>
 
         <form class="formu" method="post" action="gracias_form.html">
