--- a/foro_global.html
+++ b/foro_global.html
@@ -33,31 +33,17 @@
         <h3>Para ingresar al foro global es necesiario iniciar sesión en la página primero. Si no tiene cuenta, debe registrarse con el formulario a continuación:</h3>
         <p></p>
 
-        <form class="formu" method="post" action="gracias_form.html">
-            <p><input type="text" name="Nombre y apellido" placeholder="Nombre y apellido" required></p>
-        </form>
+        <div class="formu">
+        <form action="gracias_form.html">
 
-        <form class="formu" method="post" action="gracias_form.html">
-            <p><input type="text" name="Nombre de usuario" placeholder="Nombre de usuario" required></p>
-        </form>
+            <p> Nombre y apellido <input type="text" name="Nombre y apellido" required></p>
+            <p> Nombre de usuario <input type="text" name="Nombre de usuario" required></p>
+            <p> Teléfono <input type="number" name="tel" required></p>
+            <p> Mail <input type="email" name="mail" required></p>
 
-        <form class="formu" method="post" action="gracias_form.html">
-             <p><input type="email" name="email" placeholder="Email" required></p>
-        </form>
-
-        <form class="formu" method="post" action="gracias_form.html">
-            <p><input type="number" name="num Teléfono" placeholder="Teléfono" required></p>
-        </form>
-
-        <form class="formu" method="post" action="gracias_form.html">
-            <p>¿Desea recivir notificaciones sobre la actividad en la página? <input type="checkbox" name="SI" placeholder="SI"></p>
-        </form>
-
-        <form class="formu" method="post" action="gracias_form.html">
             <p><input type="submit" name="enviar" required placeholder="Enviar"></p>
-        </form>
 
-
+        </form>            
     </div>
 
 
