--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-        <header>
+    <a href="#" class="icono" onclick="MiFuncion()">
+        <i class="fa fa-bars"></i>
+        </a>
+    <header id="navegador">
+
             <div class="cuarenta_menu">
                 <div class="logonormal">
                     <img href="index.html" src="imgs/Logo-removebg-cele.png" alt="lo">
@@ -26,6 +30,7 @@
                         <li><a href="sobreLAbanda.html">Sobre la banda</a></li>
                         <li><a href="rutadeTOUR.html">Gira internacional</a></li>
                         <li><a href="foro_global.html">Foro global</a></li>
+                        <li><a href="galeria-imagenes.html">Music room</a></li>
                     </ul>
                 </nav>
         </header>
@@ -38,11 +43,8 @@
             <p>No te pierdas nuestra Music Room, una sala musical virtual diseñada para que explores la discografía de Glass Animals. Aquí encontrarás información sobre cada uno de sus álbumes, letras, videos y mucho más. Queremos que te sumerjas en la experiencia musical y descubras las historias detrás de cada canción. Gracias por ser parte de esta comunidad fanática de la música. Cada uno de ustedes hace que este lugar sea aún más especial. ¡Explora, conectate y disfruta de todo lo que Glass Animals tiene para ofrecer!</p>
         </div>
         </div>
-    
 
-    <!--<picture>
-        <source media="(min-width: 480px)" srcset="Image">
-    </picture>-->
+<script src="MENUJAVA.js"></script>    
 </body>    
 
 <footer> 
@@ -52,10 +54,11 @@
             <a href="https://www.tiktok.com/@glassanimalsofficial?lang=es" target="_blank"><p>TikTok: @glasssaanimals</p></a>
             <a href="mailto:no_reply@uk-umg.com" target="_blank"><p>Mail: glassanimalscontacts@gmail.com</p></a>
     </div>
+    
 
-    <!--<iframe src=".html" class="publix" name="marco" frameborder="0" scrolling="no"> </iframe>-->
+    <iframe src="anuncio.html.html" class="publix" name="marco" frameborder="0" scrolling="no"> </iframe>
 
 </footer>
 
-<script src="MENUJAVA.js"></script>
+
 </html>
