--- a/sobreLAbanda.html
+++ b/sobreLAbanda.html
@@ -26,6 +26,7 @@
                     <li><a href="sobreLAbanda.html">Sobre la banda</a></li>
                     <li><a href="rutadeTOUR.html">Gira internacional</a></li>
                     <li><a href="foro_global.html">Foro global</a></li>
+                    <li><a href="galeria-imagenes.html">Music room</a></li>
                 </ul>
             </nav>
     </header>
@@ -41,6 +42,7 @@
         </div>
 
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N6XD44P" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</body>
+
 <script src="MENUJAVA.js"></script>
+</body>
 </html>
