--- a/index.html
+++ b/index.html
@@ -54,9 +54,21 @@
             <a href="https://www.tiktok.com/@glassanimalsofficial?lang=es" target="_blank"><p>TikTok: @glasssaanimals</p></a>
             <a href="mailto:no_reply@uk-umg.com" target="_blank"><p>Mail: glassanimalscontacts@gmail.com</p></a>
     </div>
-    
 
-    <iframe src="anuncio.html.html" class="publix" name="marco" frameborder="0" scrolling="no"> </iframe>
+    <section>
+    <div class="contendoraanuncio">
+        <div class="anuncio">
+            <iframe src= "https://ioubin.github.io/VinRec/anuncio.html"
+        width="100%" height="600px"
+        name="marco" frameborder="0"
+        scrolling="no"></iframe>
+        </div> </div>
+        </section>
+
+
+    <div class="foot">
+    <p>Ir a presentación</p>
+    </div>
 
 </footer>
 
