--- a/rutadeTOUR.html
+++ b/rutadeTOUR.html
@@ -11,19 +11,24 @@
     <link rel="stylesheet" href="estilosgenerales.css">
 </head>
 <body>
-    <header>
-        <div class="cuarenta_menu">
-            <div class="logonormal">
-                <img href="index.html" src="imgs/Logo-removebg-cele.png" alt="lo">
-            </div>
-        <div class="menudebarra">
-            <nav>
-                <ul>
+    <a href="#" class="icono" onclick="MiFuncion()">
+        <i class="fa fa-bars"></i>
+        </a>
+    <header id="navegador">
+
+            <div class="cuarenta_menu">
+                <div class="logonormal">
+                    <img href="index.html" src="imgs/Logo-removebg-cele.png" alt="lo">
+                </div>
+            <div class="menudebarra">
+                <nav>
+                    <ul>
                     <a><h3>Menú</h3></a>
                     <li><a href="index.html">Inicio</a> </li>
                     <li><a href="sobreLAbanda.html">Sobre la banda</a></li>
                     <li><a href="rutadeTOUR.html">Gira internacional</a></li>
                     <li><a href="foro_global.html">Foro global</a></li>
+                    <li><a href="galeria-imagenes.html">Music room</a></li>
                 </ul>
             </nav>
     </header>        
@@ -57,6 +62,6 @@
 
             <div class="map4"> <img src="imgs/fotomap4pek.jpg" alt="Heat Waves from Dreamland"></div>
 
-
+<script src="MENUJAVA.js"></script>
 </body>
 </html>
