--- a/sobreLAbanda.html
+++ b/sobreLAbanda.html
@@ -13,14 +13,18 @@
     
 </head>
 <body>
-    <header>
-        <div class="cuarenta_menu">
-            <div class="logonormal">
-                <img href="index.html" src="imgs/Logo-removebg-cele.png" alt="lo">
-            </div>
-        <div class="menudebarra">
-            <nav>
-                <ul>
+    <a href="#" class="icono" onclick="MiFuncion()">
+        <i class="fa fa-bars"></i>
+        </a>
+    <header id="navegador">
+
+            <div class="cuarenta_menu">
+                <div class="logonormal">
+                    <img href="index.html" src="imgs/Logo-removebg-cele.png" alt="lo">
+                </div>
+            <div class="menudebarra">
+                <nav>
+                    <ul>
                     <a><h3>Menú</h3></a>
                     <li><a href="index.html">Inicio</a> </li>
                     <li><a href="sobreLAbanda.html">Sobre la banda</a></li>
