--- a/index.html
+++ b/index.html
@@ -1,76 +1,83 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com"> <!--fuentes-->
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    <script source="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
-    <title>Mi sitio web</title>
-    <link rel="stylesheet" href="estilosgenerales.css">
-</head>
+<!doctype html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<body>
-    <a href="#" class="icono" onclick="MiFuncion()">
-        <i class="fa fa-bars"></i>
-        </a>
-    <header id="navegador">
+		<title>PRESENTACIÓN GlassAnimals</title>
 
-            <div class="cuarenta_menu">
-                <div class="logonormal">
-                    <img href="index.html" src="imgs/Logo-removebg-cele.png" alt="lo">
-                </div>
-            <div class="menudebarra">
-                <nav>
-                    <ul>
-                        <a><h3>Menú</h3></a>
-                        <li><a href="index.html">Inicio</a> </li>
-                        <li><a href="sobreLAbanda.html">Sobre la banda</a></li>
-                        <li><a href="rutadeTOUR.html">Gira internacional</a></li>
-                        <li><a href="foro_global.html">Foro global</a></li>
-                        <li><a href="galeria-imagenes.html">Music room</a></li>
-                    </ul>
-                </nav>
-        </header>
+		<link rel="stylesheet" href="dist/reset.css">
+		<link rel="stylesheet" href="dist/reveal.css">
+		<link rel="stylesheet" href="dist/theme//Glanimals1.css">
 
+		<!-- Theme used for syntax highlighted code -->
+		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+	</head>
+	<body>
+		<div class="reveal">
+			<div class="slides">
+				<section>
+					<img src="imagenes/Logo-bgcopia.png" style="width: 14%;">
+					<h1>Glass Animals</h1>
+					<h2><a href="https://eugeniasq.github.io/GlassAnimals/ "target="_blank">Sitio oficial</a></h2>
+					<p>Eugenia Quiroga | Lic en diseño | 2024</p>
+					<p>Wenceslao Zavala | Materiales y Procesos 1</p>
+				</section>
 
-        <div class="content">
-            <b><h1>Bienvenidos a la página oficial de Glass Animals</h1></b>
-            <p>Este espacio ha sido creado para que puedas conectarte más profundamente con la música y la comunidad del grupo musical Glass Animals. Mantente al tanto de las novedades de la gira mundial, donde compartiremos información exclusiva sobre fechas, sorpresas y momentos especiales que no querrás perderte. En la bibliografía podrás explorar su trayectoria, desde los inicios hasta el presente, descubriendo cómo sus influencias y vivencias han dado forma a nuestra música.</p>
-            <p>Además, queremos que este sitio sea un lugar de encuentro para todos los fans alrededor del mundo. En el foro global, se podrá interactuar con otros apasionados de la música, compartir tus pensamientos sobre las nuevas canciones y, en ocasiones, participar en conversaciones directamente con los miembros de la banda. ¡Tus opiniones son importantes y siempre estamos deseando escuchar lo que tienes que decir!</p>
-            <p>No te pierdas nuestra Music Room, una sala musical virtual diseñada para que explores la discografía de Glass Animals. Aquí encontrarás información sobre cada uno de sus álbumes, letras, videos y mucho más. Queremos que te sumerjas en la experiencia musical y descubras las historias detrás de cada canción. Gracias por ser parte de esta comunidad fanática de la música. Cada uno de ustedes hace que este lugar sea aún más especial. ¡Explora, conectate y disfruta de todo lo que Glass Animals tiene para ofrecer!</p>
-        </div>
-        </div>
+				<section>
+					<h3>Este es el sitio web de la banda inglesa <a href="https://open.spotify.com/intl-es/artist/4yvcSjfu4PC0CYQyLy4wSq?si=cSwiFRG3Sz2mpIwu--Hmow" target="_blank">Glass Animals</a>. Ya que ellos no tienen su propia página web, vi la oportunidad para empezar a desarrollarla. Contiene una biografía contando sobre la historia de banda, la ruta de su gira mundial, un foro global y un Music Room.</h3>
+				</section>
 
-<script src="MENUJAVA.js"></script>    
-</body>    
+				<section>
+					<h1>Wireframes</h1>
+				</section>
 
-<footer> 
-    <div class="content" id="caja1">
-        <h3>REDES SOCIALES Y CONTACTO</h3>
-            <a href="https://www.instagram.com/glassanimals/?hl=es" target="_blank"><p>Instagram: @glassanimals</p></a>
-            <a href="https://www.tiktok.com/@glassanimalsofficial?lang=es" target="_blank"><p>TikTok: @glasssaanimals</p></a>
-            <a href="mailto:no_reply@uk-umg.com" target="_blank"><p>Mail: glassanimalscontacts@gmail.com</p></a>
-    </div>
+				<section>
+					<section><h3 style="color: #FF79C6;">Vista en celulares</h3>
+					<h4>Wireframe</h4> <img src="imagenes/wireCEL.jpg" style="width: 60%; display: inline-block;"></section>
+					<section><h4>En sitio</h4> <img src="imagenes/vistaCEL.jpg" style="width: 60%; display: inline-block;"></section>
+				</section>
 
-    <section>
-    <div class="contendoraanuncio">
-        <div class="anuncio">
-            <iframe src= "https://ioubin.github.io/VinRec/anuncio.html"
-        width="100%" height="600px"
-        name="marco" frameborder="0"
-        scrolling="no"></iframe>
-        </div> </div>
-        </section>
+				<section>
+					<section><h3 style="color: #FF79C6;">Vista en computadoras</h3>
+					<h4>Wireframe</h4> <img src="imagenes/vistaWCOM.jpg" style="width: 50%; display: inline-block;"></section>
+					<section><h4>En sitio</h4> <img src="imagenes/vistaCOM.jpg" style="width: 60%; display: inline-block;"></section>
+				</section>
 
+				<section>
+					<h3>El diseño está inspirado en la estética <a style="color: #d8279d;"> Vaporwave</a> del tercer álbum de Glass Animals, <a href="https://open.spotify.com/intl-es/album/5bfpRtBW7RNRdsm3tRyl3R?si=AI3eHpYRTb-TY3w_yJQZgg" target="_blank">Dreamland</a>. Este fue su disco más popular, lo que ayududa a identificar a la banda fácilmente.</h3>
+				</section>
 
-    <div class="foot">
-    <p>Ir a presentación</p>
-    </div>
+				<section>
+					<h1>Características del sitio</h1>
+				</section>
 
-</footer>
+				<section style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
+					<h3 style="color: #ffb300;"><li>Interfaz consistente y navegable</li></h3>
+					<h3><li>Adaptable a celulares y computadoras</li></h3>
+					<h3 style="color: #ab46cd;;"><li>Temática musical</li></h3>
+					<h3 style="color: #ffffff;"><li>Estética homogenea</li></h3>
+				</section>
 
+				<section>
+					<img src="imagenes/Logo-bgcopia.png" style="width: 20%;">
+					<h2>¡Gracias por ver!</h2>
+					<h4><a href="https://eugeniasq.github.io/GlassAnimals/ "target="_blank">( Volver al sitio web )</a></h4>
+				</section>
+			</div>
+		</div>
 
+		<script src="dist/reveal.js"></script>
+		<script src="plugin/notes/notes.js"></script>
+		<script src="plugin/markdown/markdown.js"></script>
+		<script src="plugin/highlight/highlight.js"></script>
+		<script>
+
+			Reveal.initialize({
+				hash: true,
+
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+			});
+		</script>
+	</body>
 </html>
